--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Git &amp  GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
+    <p>Learn more about git <a href="https://git-scm.com/book/en/v2gi"></a>official web site</p>
   </body>
 </html>
